--- a/docs/_css/jammer.css
+++ b/docs/_css/jammer.css
@@ -10,11 +10,27 @@
 h3 {
 	margin-top: 30px;
 	margin-bottom: 10px;
+	max-width: calc(100vw - 20px);
 }
 
 p {
 	margin-top: 10px;
 	margin-bottom: 10px;
+}
+
+.h3_games_and_sort_btn {
+	display: inline-block;
+	max-width: calc(100vw - 20px);
+}
+
+.h3_games {
+	display: inline-block;
+	margin-right: 20px;
+	margin-bottom: 10px;
+}
+
+.sort_btn {
+	margin-top: 0px;
 }
 
 .major_jam_tag {
