--- a/docs/_css/jammer.css
+++ b/docs/_css/jammer.css
@@ -10,7 +10,6 @@
 h3 {
 	margin-top: 30px;
 	margin-bottom: 10px;
-	max-width: calc(100vw - 20px);
 }
 
 p {
@@ -20,13 +19,12 @@ p {
 
 .h3_games_and_sort_btn {
 	display: inline-block;
-	max-width: calc(100vw - 20px);
 }
 
 .h3_games {
 	display: inline-block;
 	margin-right: 20px;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 
 .sort_btn {
@@ -108,6 +106,14 @@ p {
 }
 
 @media only screen and (max-width: 915px) {
+	h3 {
+		max-width: calc(100vw - 20px);
+	}
+
+	.h3_games_and_sort_btn {
+		max-width: calc(100vw - 20px);
+	}
+
 	.major_jam_tag {
 		float: none;
 		margin-left: 7px;
