--- a/docs/_css/jammer_leaderboard.css
+++ b/docs/_css/jammer_leaderboard.css
@@ -99,11 +99,18 @@
 		margin-left: 7px;
 	}
 
+	#result * {
+		max-width: calc(100vw - 20px);
+	}
+
+	.game_list * {
+		display: inline-block;
+	}
+
 	.jammer_link {
 		font-size: x-large;
 		margin-top: 30px;
 		margin-bottom: 10px;
-		max-width: calc(100vw - 20px);
 	}
 
 	.game:nth-child(1) {
@@ -121,15 +128,15 @@
 		padding-right: 10px;
 		padding-top: 10px;
 		padding-bottom: 10px;
-		width: calc(100vw - 20px);
-		min-width: calc(100vw - 20px);
 		transform: translateX(-10px);
+	}
+
+	.game * {
+		min-width: auto;
 	}
 
 	.title {
 		display: block;
-		max-width: calc(100vw - 20px);
-		min-width: calc(100vw - 20px);
 		padding-right: 0px;
 		font-weight: bold;
 		margin-bottom: 8px;
@@ -137,8 +144,6 @@
 	
 	.by_list {
 		display: block;
-		max-width: calc(100vw - 20px);
-		min-width: calc(100vw - 20px);
 		padding-right: 0px;
 		margin-bottom: 8px;
 	}
@@ -149,16 +154,12 @@
 	
 	.jam {
 		display: block;
-		max-width: calc(100vw - 20px);
-		min-width: calc(100vw - 20px);
 		padding-right: 0px;
 		margin-bottom: 8px;
 	}
 	
 	.rank {
 		display: inline;
-		max-width: auto;
-		min-width: auto;
 		padding-right: 0px;
 		margin-right: 20px;
 	}
@@ -168,9 +169,7 @@
 	}
 	
 	.ratings {
-		display: inline;
-		max-width: auto;
-		min-width: auto;
+		display: inline-block;
 		padding-right: 0px;
 		margin-right: 20px;
 	}
@@ -180,9 +179,7 @@
 	}
 	
 	.score {
-		display: inline;
-		max-width: auto;
-		min-width: auto;
+		display: inline-block;
 		padding-right: 0px;
 		margin-right: 20px;
 	}
