--- a/docs/_css/main.css
+++ b/docs/_css/main.css
@@ -132,7 +132,7 @@ body {
 }
 
 @media only screen and (max-width: 915px) {
-	.major_jam_tag {
+	.major_jam_tag, .late_tag, .early_tag {
 		float: none;
 	}
 
